fixes cat-filters vertical spacing

--- a/app/assets/stylesheets/_grid_index.css.scss
+++ b/app/assets/stylesheets/_grid_index.css.scss
@@ -1,6 +1,5 @@
 #filters{
-
-	padding: $margin-vertical-normal $margin-horizontal-normal 0 $margin-horizontal-normal;
+	
 	color: $black;
 	display: flex;
 	flex-wrap: wrap;
